# story_sign

./: .coverage  API_ENDPOINTS_FIX_SUMMARY.md  BACKEND_ENDPOINTS_UPDATE.md  CONTRIBUTING.md  DEPLOYMENT_DIRECTORY_FIX.md  DEPLOYMENT_FINAL_FIX_SUMMARY.md  DEPLOYMENT_SUCCESS_GUIDE.md  FINAL_DEPLOYMENT_FIX.md  FRONTEND_BUILD_FIX.md  FRONTEND_DEPLOYMENT_FINAL_FIX.md  FRONTEND_ERRORS_FINAL_SUMMARY.md  FRONTEND_ERROR_FIXES.md  LICENSE  README.md  RENDER_DEPLOYMENT_ACTION_PLAN.md  RENDER_DEPLOYMENT_IMMEDIATE_FIX.md  RENDER_FINAL_FIX_GUIDE.md  RENDER_MANUAL_FIX_REQUIRED.md  RENDER_STARTUP_FIX.md  RENDER_TROUBLESHOOTING.md  STORY_GENERATION_API_TESTS.md  STORY_GENERATION_FIX_SUMMARY.md  STORY_GENERATION_RESPONSE_FIX_FINAL.md  STORY_RESPONSE_FORMAT_FIX.md  StorySign_ Week 2 Implementation Plan (Vertical Slice).md  bug_fix.md  fix.md  fix_frontend_deployment.py  fix_frontend_errors.py  fix_render_deployment.py  fix_render_startup.py  fix_story_generation_api.py  fix_story_response_format.py  integrate.md  modular.md  netlify.toml  redesign.md  render.yaml  story_sign_phase_2.md  task_17.2_video.md  (+7 more)
StorySign_Platform/: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ADVANCED_STORY_GENERATION_IMPLEMENTATION.md  AI_FEEDBACK_MODAL_FIX.md  ANALYTICS_DASHBOARD_IMPLEMENTATION_SUMMARY.md  API_ENDPOINT_FIX_SUMMARY.md  AUTH_DATABASE_MIGRATION_SUMMARY.md  AUTH_LOGIN_FIX_SUMMARY.md  BACKEND_DEPLOYMENT_FIX.md  BACKUP_DISASTER_RECOVERY_IMPLEMENTATION_SUMMARY.md  BUILD_ERROR_FIX.md  CACHE_CLEANUP_SUMMARY.md  CHANGELOG.md  COLLABORATIVE_FEATURES_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_TEST_RESULTS.md  CONTRIBUTING.md  CONTROL_MESSAGE_FIX_SUMMARY.md  CROSS_PLATFORM_SYNC_IMPLEMENTATION_SUMMARY.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_MIGRATION_STATUS.md  DATABASE_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_LOG_ANALYSIS.md  ENVIRONMENT_SETUP_GUIDE.md  ESLINT_WARNINGS_FIXES_COMPLETE.md  EXTERNAL_INTEGRATIONS_IMPLEMENTATION_SUMMARY.md  FRONTEND_API_FIX.md  GIT_REPOSITORY_SUMMARY.md  GIT_SETUP.md  GROQ_VISION_DIAGNOSIS_SUMMARY.md  GROQ_VISION_INTEGRATION_SUMMARY.md  GROUP_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  IMPORT_FIX_SUMMARY.md  INTEGRATION_TESTS_README.md  INTEGRATION_USAGE_GUIDE.md  (+91 more)
StorySign_Platform/.github/: pull_request_template.md
StorySign_Platform/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
StorySign_Platform/.github/workflows/: ci.yml  deploy.yml  maintenance.yml  preview.yml
StorySign_Platform/backend/: .env.example  .gitignore  API_IMPLEMENTATION_SUMMARY.md  API_README.md  COLLABORATIVE_FEATURES_IMPLEMENTATION_SUMMARY.md  CONFIG_README.md  CONTENT_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  PLUGIN_SECURITY_IMPLEMENTATION_SUMMARY.md  PROGRESS_TRACKING_IMPLEMENTATION_SUMMARY.md  PYTEST_TEST_RESULTS.md  README.md  RESEARCH_MIGRATION_SUCCESS.md  STARTUP_FIX_SUMMARY.md  TASK_10_COMPLETION_STATUS.md  TASK_14_1_IMPLEMENTATION_SUMMARY.md  TASK_14_2_IMPLEMENTATION_SUMMARY.md  TASK_16_1_IMPLEMENTATION_SUMMARY.md  TASK_16_2_IMPLEMENTATION_SUMMARY.md  TASK_17_1_IMPLEMENTATION_SUMMARY.md  TASK_18_RESEARCH_DATA_MANAGEMENT_SUMMARY.md  TASK_7_1_IMPLEMENTATION_SUMMARY.md  TASK_7_2_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  advanced_compression.py  apply_research_migration.py  check_database_migrations.py  check_groq_models.py  check_tidb_setup.py  complete_tidb_migration.py  comprehensive_test_suite.py  config.py  config.yaml  create_branding_tables_standalone.py  create_integration_tables_standalone.py  create_research_tables_simple.py  debug_groq_400_error.py  debug_groq_errors.py  debug_live_landmarks.py  debug_mediapipe_detection.py  debug_tidb_connection.py  (+164 more)
StorySign_Platform/backend/api/: __init__.py  analytics.py  analytics_simple.py  asl_world.py  auth.py  auth_db.py  auth_simple.py  backup_recovery.py  branding.py  collaborative.py  collaborative_websocket.py  content.py  documentation.py  graphql_endpoint.py  group_management.py  harmony.py  integrations.py  monitoring.py  optimization.py  plugins.py  privacy.py  reconnect.py  research.py  router.py  security.py  services_demo.py  social.py  sync.py  system.py  users.py  websocket.py
StorySign_Platform/backend/config/: backup_recovery.yaml  monitoring.yaml  security.yaml  tidb_cluster.yaml
StorySign_Platform/backend/core/: __init__.py  adaptive_quality.py  base_service.py  cache_service.py  config_service.py  database_optimizer.py  database_service.py  db.py  error_tracking.py  health_check.py  message_queue.py  monitoring_service.py  optimized_video_processor.py  plugin_api.py  plugin_interface.py  plugin_security.py  service_container.py  service_registry.py  websocket_pool.py
StorySign_Platform/backend/middleware/: __init__.py  auth_middleware.py  rate_limiting.py
StorySign_Platform/backend/migrations/: __init__.py  create_content_tables.py  (+13 more)
StorySign_Platform/docs/: ARCHITECTURE.md  CODING_STANDARDS.md  DEVELOPER_ONBOARDING.md  MODULE_DEVELOPMENT_GUIDE.md  SCALABILITY_VALIDATION.md
StorySign_Platform/frontend/: .env.development  .env.example  .env.production  .eslintrc.js  .gitignore  .prettierrc.js  AUTHENTICATION_ERROR_HANDLING_SUMMARY.md  AUTHENTICATION_WORKFLOW_TEST_SUMMARY.md  DUPLICATE_IMPORT_FIX.md  ERROR_BOUNDARIES_IMPLEMENTATION_SUMMARY.md  MODULAR_STRUCTURE_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  REACT_IMPORT_FIXES.md  README.md  end_to_end_pipeline_report.json  final-integration-check.js  full_body_mediapipe.py  manual-user-workflow-test.js  mediapipe_code_working.py  package-lock.json  package.json  problem_solution.md  task-10-validation-summary.md  task_10_verification_report.json  test-api-endpoint-fix.js  test-router-fix.js  test_api_config.js  test_end_to_end_video_pipeline.js  test_integration_performance.js  test_task_10_verification.js  test_task_9_1_verification.js  validate-implementation.js
StorySign_Platform/mobile/: README.md  index.js  metro.config.js  package.json  tsconfig.json
StorySign_Platform/scripts/: health-check.sh  validate-deployment.py
(+421 files in other folders)
